--- a/app/res/values-v11/strings.xml
+++ b/app/res/values-v11/strings.xml
@@ -10,6 +10,7 @@
 	<string name="menu_testing">Testing</string>
 	<string name="menu_update">Update</string>
     <string name="menu_quit">Quit</string>
+    <string name="menu_share">Share</string>
 	<string name="search_label">Search</string>
 	<string name="settings_description">FOSDEM search</string>
 	<string name="menu_test_display_event">Display event</string>
